[gd_scene load_steps=6 format=2]

[ext_resource path="res://Src/Minigames/PipeMinigame/PipeMinigame.gd" type="Script" id=1]
[ext_resource path="res://Assets/Minigames/PipeBackground.png" type="Texture" id=2]
[ext_resource path="res://Assets/Temp/Bananas.png" type="Texture" id=3]
[ext_resource path="res://Assets/Minigames/Pipe.png" type="Texture" id=4]

[sub_resource type="RectangleShape2D" id=1]
extents = Vector2( 10, 122.15 )

[node name="PipeMinigame" type="Node2D"]
script = ExtResource( 1 )

[node name="Bg" type="Sprite" parent="."]
texture = ExtResource( 2 )

[node name="Pipes" type="Node2D" parent="."]
position = Vector2( -96, -93 )

[node name="Camera2D" type="Camera2D" parent="."]
visible = false

[node name="Marker" type="Sprite" parent="."]
position = Vector2( -550, -96 )
texture = ExtResource( 3 )

[node name="Marker2" type="Sprite" parent="."]
modulate = Color( 1, 0.113725, 0.113725, 1 )
position = Vector2( -550, -96 )
texture = ExtResource( 3 )

[node name="WaterLine" type="Line2D" parent="."]
position = Vector2( -96, -96 )
points = PoolVector2Array( 0, 0 )
width = 20.0
default_color = Color( 0, 0.694118, 1, 1 )
joint_mode = 2
round_precision = 16

[node name="PipeWrongOtline" type="KinematicBody2D" parent="."]

[node name="CollisionShape2D" type="CollisionShape2D" parent="PipeWrongOtline"]
position = Vector2( -135.764, -34.6482 )
shape = SubResource( 1 )

[node name="CollisionShape2D2" type="CollisionShape2D" parent="PipeWrongOtline"]
position = Vector2( 133.643, -36.7696 )
shape = SubResource( 1 )

[node name="CollisionShape2D3" type="CollisionShape2D" parent="PipeWrongOtline"]
position = Vector2( -0.707, -140 )
rotation = 1.5708
shape = SubResource( 1 )

[node name="CollisionShape2D4" type="CollisionShape2D" parent="PipeWrongOtline"]
position = Vector2( -2.121, 75 )
rotation = 1.5708
shape = SubResource( 1 )

[node name="Selector" type="Sprite" parent="."]
visible = false
texture = ExtResource( 4 )
hframes = 5
frame = 4
